# protobuf-interface-example

./: CMakeLists.txt  README.md  RobotInterface.csproj
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check-and-tag.yml  create-release.yaml  create-release.yml
interface/: Robot.proto  RobotInterface.proto
interface/c_sharp/: Robot.cs  RobotInterface.cs  RobotInterface.csproj
interface/cpp/: CMakeLists.txt  Robot.pb.cc  Robot.pb.h  RobotInterface.pb.cc  RobotInterface.pb.h  RobotInterfaceVersion.in.h
scripts/: check-generated-interface.sh  check-version.sh  generate-interface.sh  update-version.sh
